# typegen/openapi/index.yaml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.0
 info:
   title: Messari API
   version: 0.0.1
@@ -32,28 +32,7 @@ components:
       $ref: './common/components.yaml#/components/schemas/APIResponseWithMetadata'
     PaginationResult:
       $ref: './common/components.yaml#/components/schemas/PaginationResult'
-    
-    # MarketData components
-    MarketDataAsset:
-      $ref: './services/marketdata/openapi.yaml#/components/schemas/MarketDataAsset'
-    MarketDataAssetMarketData:
-      $ref: './services/marketdata/openapi.yaml#/components/schemas/AssetMarketData'
-    MarketDataAssetSupply:
-      $ref: './services/marketdata/openapi.yaml#/components/schemas/AssetSupply'
-    MarketDataAssetMarketcap:
-      $ref: './services/marketdata/openapi.yaml#/components/schemas/AssetMarketcap'
-    MarketDataROIData:
-      $ref: './services/marketdata/openapi.yaml#/components/schemas/ROIData'
-    MarketDataAssetWithROIData:
-      $ref: './services/marketdata/openapi.yaml#/components/schemas/AssetWithROIData'
-    MarketDataAssetWithATHData:
-      $ref: './services/marketdata/openapi.yaml#/components/schemas/AssetWithATHData'
-    MarketDataPlatformContract:
-      $ref: './services/marketdata/openapi.yaml#/components/schemas/PlatformContract'
-    MarketDataOHLCV:
-      $ref: './services/marketdata/openapi.yaml#/components/schemas/OHLCV'
-    MarketDataTimeUTC:
-      $ref: './services/marketdata/openapi.yaml#/components/schemas/TimeUTC'
+  
   parameters:
     # Common parameters
     page:
@@ -93,32 +72,14 @@ paths:
   /news/v1/news/sources:
     $ref: './services/news/openapi.yaml#/paths/~1news~1v1~1news~1sources'
 
-  # MarketData Paths ADJUST ALL ROUTES + YAML PATHS
-  /marketdata/v1/metrics/roi-data: 
-    $ref: './services/marketdata/openapi.yaml#/paths/~1assets~1roi'
-  /marketdata/v1/metrics/ath-data:
-    $ref: './services/marketdata/openapi.yaml#/paths/~1assets~1ath'
-  /marketdata/v1/metrics/{assetId}/price:
-    $ref: './services/marketdata/openapi.yaml#/paths/~1assets~1{assetId}~1price'
-  /marketdata/v1/metrics/{assetId}/roi-data:
-    $ref: './services/marketdata/openapi.yaml#/paths/~1assets~1{assetId}~1roi'
-  /marketdata/v1/metrics/{assetId}/ath-data:
-    $ref: './services/marketdata/openapi.yaml#/paths/~1assets~1{assetId}~1ath'
-
-# Import tags from all services
-tags:
-  # AI Service Tags
-  - name: ai:Chat
-    description: AI chat completion endpoints
-  - name: ai:Classification
-    description: AI entity extraction and classification endpoints
-  
-  # Intel Service Tags
-  - name: intel:Events
-    description: Event-related endpoints
-  - name: intel:Assets
-    description: Asset-related endpoints
-  
-  # News Service Tags
-  - name: news:News
-    description: News feed and related endpoints 
+  # MarketData Service Paths
+  /marketdata/v1/assets/roi: 
+    $ref: './services/marketdata/openapi.yaml#/paths/~1marketdata~1v1~1assets~1roi'
+  /marketdata/v1/assets/ath:
+    $ref: './services/marketdata/openapi.yaml#/paths/~1marketdata~1v1~1assets~1ath'
+  /marketdata/v1/assets/{assetId}/price:
+    $ref: './services/marketdata/openapi.yaml#/paths/~1marketdata~1v1~1assets~1{assetId}~1price'
+  /marketdata/v1/assets/{assetId}/roi:
+    $ref: './services/marketdata/openapi.yaml#/paths/~1marketdata~1v1~1assets~1{assetId}~1roi'
+  /marketdata/v1/assets/{assetId}/ath:
+    $ref: './services/marketdata/openapi.yaml#/paths/~1marketdata~1v1~1assets~1{assetId}~1ath'
